[package]
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
name = "legare"
version = "1.0.0"
license = "Apache-2.0"

[dependencies]
env_logger = "0.4.3"
hyper = "0.10.11"
iron = "0.5.1"
log = "0.3.8"
logger = "0.3.0"
mount = "0.3.0"
pest = "1.0.0-beta.14"
pest_derive = "1.0.0-beta.14"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"

[dependencies.iron-json-response]
git = "https://github.com/storily/iron-json-response"
